--- a/03_evaluation.ipynb
+++ b/03_evaluation.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a08be486",
    "metadata": {},
    "outputs": [
@@ -93,8 +93,8 @@
     "        \"truth\": true_label,\n",
     "        \"pred_sys1\": pred_1['verdict'],\n",
     "        \"pred_sys2\": pred_2['verdict'],\n",
-    "        \"pred_sys3\": pred_3['plagiarism'],\n",
-    "        \"pred_sys4\": pred_4['plagiarism'],\n",
+    "        \"pred_sys3\": pred_3['verdict'],\n",
+    "        \"pred_sys4\": pred_4['verdict'],\n",
     "    })"
    ]
   },
