final major change

--- a/02_interactive.ipynb
+++ b/02_interactive.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5822ec16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nikolozrusishvili/Nika/KIU/Semester-7/LLM/applied_llm_systems_hw1/.venv/lib/python3.14/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pickle\n",
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d5f54689",
    "metadata": {},
    "outputs": [],
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7eaf2ba3",
    "metadata": {},
    "outputs": [],
@@ -67,10 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "20db19b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 38 documents from corpus\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"indexes/documents.pkl\", \"rb\") as f:\n",
     "    documents = pickle.load(f)\n",
@@ -80,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "52e6d3d9",
    "metadata": {},
    "outputs": [],
@@ -96,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "54c4e0eb",
    "metadata": {},
    "outputs": [],
@@ -145,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f8842104",
    "metadata": {},
    "outputs": [],
@@ -166,7 +183,7 @@
     "    prompt = f\"\"\"\n",
     "    You are a code plagiarism detection system.\n",
     "    \n",
-    "    RETRIEVED REFERENCE \\CODE:\n",
+    "    RETRIEVED REFERENCE CODE:\n",
     "    {full_repo_context}\n",
     "    \n",
     "    SUSPICIOUS STUDENT CODE:\n",
@@ -177,6 +194,7 @@
     "    - If the student code is a clear derivative (same logic, renamed variables, reordered lines), return verdict 1.\n",
     "    - If the student code uses a different algorithm or logic, return verdict 0.\n",
     "    \"\"\"\n",
+    "\n",
     "    try:\n",
     "        response = model.generate_content(\n",
     "                model=model_name,\n",
@@ -187,8 +205,7 @@
     "        structured_output = PlagiarismResult.model_validate_json(response.text) # type: ignore\n",
     "        \n",
     "        result = structured_output.model_dump()\n",
-    "        \n",
-    "        result[\"retrieved_chunks\"] = retrieved_chunks\n",
+    "    \n",
     "        \n",
     "        return result\n",
     "    \n",
@@ -198,13 +215,12 @@
     "        return {\n",
     "            \"verdict\": 0, \n",
     "            \"explanation\": f\"Error during processing: {str(e)}\",\n",
-    "            \"retrieved_chunks\": retrieved_chunks\n",
     "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "db7e017d",
    "metadata": {},
    "outputs": [],
@@ -257,8 +273,6 @@
     "        \n",
     "        result = structured_output.model_dump()\n",
     "        \n",
-    "        result[\"retrieved_chunks\"] = retrieved_chunks\n",
-    "        \n",
     "        return result\n",
     "    \n",
     "    except Exception as e:\n",
@@ -267,13 +281,12 @@
     "        return {\n",
     "            \"verdict\": 0, \n",
     "            \"explanation\": f\"Error during processing: {str(e)}\",\n",
-    "            \"retrieved_chunks\": retrieved_chunks\n",
     "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "db0a177b",
    "metadata": {},
    "outputs": [],
