--- a/01_indexing.ipynb
+++ b/01_indexing.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "969f2826",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nikolozrusishvili/Nika/KIU/Semester-7/LLM/applied_llm_systems_hw1/.venv/lib/python3.14/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "366c42a7",
    "metadata": {},
    "outputs": [],
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "45d4e713",
    "metadata": {},
    "outputs": [
@@ -47,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 18 files\n"
+      "Loaded 38 files\n"
      ]
     }
    ],
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "9470f712",
    "metadata": {},
    "outputs": [],
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "id": "02788f87",
    "metadata": {},
    "outputs": [],
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "fa65e4c7",
    "metadata": {},
    "outputs": [],
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "id": "b06621bf",
    "metadata": {},
    "outputs": [],
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "03e51ef4",
    "metadata": {},
    "outputs": [
@@ -170,7 +179,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Batches: 100%|██████████| 1/1 [00:00<00:00,  3.05it/s]\n"
+      "Batches: 100%|██████████| 3/3 [00:01<00:00,  1.73it/s]\n"
      ]
     }
    ],
@@ -191,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "df7909ef",
    "metadata": {},
    "outputs": [
@@ -199,21 +208,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FAISS index size: 25\n"
+      "FAISS index size: 75\n"
      ]
     }
    ],
    "source": [
     "dim = embeddings.shape[1]\n",
     "index = faiss.IndexFlatIP(dim)\n",
-    "index.add(embeddings)\n",
+    "index.add(embeddings) # type: ignore\n",
     "\n",
     "print(\"FAISS index size:\", index.ntotal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "id": "2aa54b34",
    "metadata": {},
    "outputs": [],
