--- a/01_indexing.ipynb
+++ b/01_indexing.ipynb
@@ -118,10 +118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "02788f87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75\n"
+     ]
+    }
+   ],
    "source": [
     "chunked_docs = []\n",
     "\n",
@@ -135,7 +143,9 @@
     "            \"chunk_type\": chunk[\"type\"],\n",
     "            \"file_name\": chunk[\"file_name\"],\n",
     "            \"text\": chunk[\"text\"]\n",
-    "        })"
+    "        })\n",
+    "\n",
+    "print(len(chunked_docs))"
    ]
   },
   {
