--- a/02_interactive.ipynb
+++ b/02_interactive.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "5822ec16",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nikolozrusishvili/Nika/KIU/Semester-7/LLM/applied_llm_systems_hw1/.venv/lib/python3.14/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import pickle\n",
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "d5f54689",
    "metadata": {},
    "outputs": [],
@@ -59,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "7eaf2ba3",
    "metadata": {},
    "outputs": [],
@@ -76,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "20db19b4",
    "metadata": {},
    "outputs": [
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "52e6d3d9",
    "metadata": {},
    "outputs": [],
@@ -113,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "54c4e0eb",
    "metadata": {},
    "outputs": [],
@@ -121,7 +112,7 @@
     "def detect_embedding(\n",
     "    code_snippet: str,\n",
     "    top_k: int = 5,\n",
-    "    plagiarism_threshold: float = 0.42\n",
+    "    plagiarism_threshold: float = 0.4\n",
     "):\n",
     "\n",
     "    query_embedding = embedder.encode(\n",
@@ -162,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "f8842104",
    "metadata": {},
    "outputs": [],
@@ -181,7 +172,7 @@
     "    full_repo_context = \"\\n\".join(corpus_texts)\n",
     "    \n",
     "    prompt = f\"\"\"\n",
-    "    You are a code plagiarism detection system.\n",
+    "    You are a strict code plagiarism detection system. Be really careful.\n",
     "    \n",
     "    RETRIEVED REFERENCE CODE:\n",
     "    {full_repo_context}\n",
@@ -194,7 +185,6 @@
     "    - If the student code is a clear derivative (same logic, renamed variables, reordered lines), return verdict 1.\n",
     "    - If the student code uses a different algorithm or logic, return verdict 0.\n",
     "    \"\"\"\n",
-    "\n",
     "    try:\n",
     "        response = model.generate_content(\n",
     "                model=model_name,\n",
@@ -206,7 +196,7 @@
     "        \n",
     "        result = structured_output.model_dump()\n",
     "    \n",
-    "        \n",
+    "        print(result)\n",
     "        return result\n",
     "    \n",
     "    except Exception as e:\n",
@@ -220,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "db7e017d",
    "metadata": {},
    "outputs": [],
@@ -286,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "db0a177b",
    "metadata": {},
    "outputs": [],
