removed unnecesary variables

--- a/01_indexing.ipynb
+++ b/01_indexing.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "969f2826",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nikolozrusishvili/Nika/KIU/Semester-7/LLM/applied_llm_systems_hw1/.venv/lib/python3.14/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "366c42a7",
    "metadata": {},
    "outputs": [],
@@ -41,25 +32,15 @@
     "INDEX_DIR = Path(\"indexes\")\n",
     "INDEX_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "EMBEDDING_MODEL_NAME = \"all-MiniLM-L6-v2\"\n",
-    "CHUNK_SIZE = 200   # tokens approx\n",
-    "CHUNK_OVERLAP = 40"
+    "EMBEDDING_MODEL_NAME = \"all-MiniLM-L6-v2\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "45d4e713",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 38 files\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_python_files(folder: Path) -> List[Dict]:\n",
     "    records = []\n",
@@ -83,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9470f712",
    "metadata": {},
    "outputs": [],
@@ -118,18 +99,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "02788f87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "75\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chunked_docs = []\n",
     "\n",
@@ -150,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fa65e4c7",
    "metadata": {},
    "outputs": [],
@@ -161,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b06621bf",
    "metadata": {},
    "outputs": [],
@@ -181,18 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "03e51ef4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Batches: 100%|██████████| 3/3 [00:01<00:00,  1.73it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "embedder = SentenceTransformer(EMBEDDING_MODEL_NAME)\n",
     "\n",
@@ -213,15 +178,7 @@
    "execution_count": null,
    "id": "df7909ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FAISS index size: 75\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dim = embeddings.shape[1]\n",
     "index = faiss.IndexFlatIP(dim)\n",
@@ -232,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2aa54b34",
    "metadata": {},
    "outputs": [],
